Bug 456275 - [REGRESSION] Changing the default LookAndFeelPackage doesn't correctly apply its Plasma Style
Summary: [REGRESSION] Changing the default LookAndFeelPackage doesn't correctly apply ...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_desktoptheme (other bugs)
Version First Reported In: 5.25.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-07-03 11:45 UTC by Alessandro Astone
Modified: 2022-07-06 19:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Astone 2022-07-03 11:45:22 UTC
SUMMARY
On a fresh user `systemsettings kcm_desktoptheme` always shows "Breeze" as the Plasma Style, ignoring the distro's default LookAndFeelPackage choice.

STEPS TO REPRODUCE
1. Create `/usr/share/kde-settings/kde-profile/default/xdg/kdeglobals` with contents
```
[KDE]
LookAndFeelPackage=org.kde.breezetwilight.desktop
```
2. Create a new user
3. Log in as the new user

OBSERVED RESULT
Observe that the Plasma Theme is not "Breeze Dark", and indeed the panel is white.

EXPECTED RESULT
The Plasma Theme should be "Breeze Dark" as set by org.kde.breezetwilight.desktop

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora KDE
KDE Plasma Version: 5.25.2
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
This is a REGRESSION from Plasma 5.24.5
KF 5.95.0 is also affected.
Comment 1 Alessandro Astone 2022-07-03 11:56:48 UTC
s/Plasma Theme/Plasma Style/, sorry that's confusing!
Comment 2 Bug Janitor Service 2022-07-03 13:29:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1889
Comment 3 Alessandro Astone 2022-07-06 19:52:46 UTC
Git commit 14f0611e6eb0b0f6a7d9ebb7d207bca476be6d4f by Alessandro Astone.
Committed on 06/07/2022 at 19:26.
Pushed by ngraham into branch 'master'.

kcms/lookandfeel: Set all defaults when saving the default package

This was incorrectly put behind Mode::Apply in commit 34e2541b
("kcms/lookandfeel: allow users to choose what part of a Global Theme to apply")

M  +93   -95   kcms/lookandfeel/lookandfeelmanager.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/14f0611e6eb0b0f6a7d9ebb7d207bca476be6d4f
Comment 4 Nate Graham 2022-07-06 19:53:49 UTC
Git commit 0093ea7db5ad53f2b775c6d1b0a0b59c2bb1b564 by Nate Graham, on behalf of Alessandro Astone.
Committed on 06/07/2022 at 19:53.
Pushed by ngraham into branch 'Plasma/5.25'.

kcms/lookandfeel: Set all defaults when saving the default package

This was incorrectly put behind Mode::Apply in commit 34e2541b
("kcms/lookandfeel: allow users to choose what part of a Global Theme to apply")


(cherry picked from commit 14f0611e6eb0b0f6a7d9ebb7d207bca476be6d4f)

M  +93   -95   kcms/lookandfeel/lookandfeelmanager.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0093ea7db5ad53f2b775c6d1b0a0b59c2bb1b564