kcms/lookandfeel: Set all defaults when saving the default package

This was incorrectly put behind Mode::Apply in commit 34e2541b
("kcms/lookandfeel: allow users to choose what part of a Global Theme to apply")

BUG: 456275


(cherry picked from commit 14f0611e6eb0b0f6a7d9ebb7d207bca476be6d4f)